--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "7.0.2",
     "react": "16.6.0",
     "react-dom": "16.6.0",
-    "react-select": "^2.1.1"
+    "react-select": "^2.1.1",
+    "unirest": "^0.5.1"
   }
 }
